Fix main font misalignment

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -26,6 +26,7 @@
     src: url("/assets/fonts/LTSoul-Regular.otf");
     font-weight: 400;
     font-style: normal;
+    descent-override: 10%;
 }
 
 @font-face {
@@ -33,6 +34,7 @@
     src: url("/assets/fonts/LTSoul-Bold.otf");
     font-weight: 700;
     font-style: normal;
+    descent-override: 10%;
 }
 
 .font-display {
